added file linking

--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>dnd console rpg v1</title>
-    <link rel="stylesheet" href="styles.css">
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
+    <title>Health Bar</title>
 </head>
-<body>
-    <script src="index.js"></script>
-</body>
+
 </html>
+
+<body>
+    <canvas id="canvas"></canvas>
+    <script type="text/javascript" src="health-bar.js"></script>
+    <script type="text/javascript" src="index.js"></script>
+    <script type="text/javascript" src="mp-bar.js"></script>
+</body>
