--- a/index.html
+++ b/index.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="style.css" />
+    <title>dayz map for troopers clan</title>
+  </head>
+  <div id="gameContainer">
+    <canvas id="mapCanvas" width="600" height="600"></canvas>
+  </div>
 
-<head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="style.css">
-    <title>Health Bar</title>
-</head>
-
-<body>
-    <canvas id="canvas"></canvas>
-    <script type="text/javascript" src="health-bar.js"></script>
-    <script type="text/javascript" src="index.js"></script>
-    <script type="text/javascript" src="mp-bar.js"></script>
-</body>
+  <body>
+    <script src="index.js"></script>
+  </body>
 </html>
+<script>
+  window.onload = function () {
+    const canvas = document.getElementById("myCanvas");
+    const ctx = canvas.getContext("2d");
+    const img = document.getElementById("scream");
+    ctx.drawImage(img, 10, 10);
+  };
+</script>
