--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </html>
 <script>
   window.onload = function () {
+    let img =
     const canvas = document.getElementById("myCanvas");
     const ctx = canvas.getContext("2d");
     const img = document.getElementById("scream");
